# rust-service-template

./: .tool-versions  Cargo.toml  README.md  buf.yaml  docker-compose.yaml  register-debezium.sh  taskfile.yaml
.github/workflows/: ci.yaml
migrations/: 20250509104718_create_users_table.sql  20250510194956_create_outbox_table.sql  20250510195509_create_events_table.sql
protos/example/common/v1/: envelope.proto
protos/example/users/v1/events/: user_created.proto
protos/example/users/v1/rpc/: users.proto  users_service.proto
protos/example/users/v1/types/: user.proto
rpc/: Cargo.toml
workspace/: .env  .env.dev  .env.test  Cargo.toml
workspace/base/: Cargo.toml  build.rs
workspace/base/src/: config.rs  database.rs  error.rs  event.rs  event_domain.rs  event_topic.rs  event_type.rs  events.rs  lib.rs  message.rs  message_type.rs  messages.rs  outbox.rs  outbox_domain.rs  outbox_kind.rs  outbox_topic.rs  outbox_type.rs  outboxes.rs  test.rs  user_events.rs  user_outboxes.rs  users.rs
workspace/base/src/messages/: message.rs
workspace/base/src/outboxes/: outbox.rs  outbox_type.rs
workspace/base/src/users/: user.rs
workspace/bus/: Cargo.toml  build.rs
workspace/bus/src/: bus_server.rs  handlers.rs  lib.rs  main.rs  server.rs  test.rs  users.rs
workspace/bus/src/handlers/: users_events_handler.rs
workspace/meta/: Cargo.toml
workspace/meta/src/: lib.rs
workspace/rpc/: Cargo.toml  build.rs
workspace/rpc/src/: lib.rs  main.rs  rpc_server.rs  server.rs
workspace/rpc/src/handlers/: user_handler.rs
workspace/rpc/src/services/: users.rs
workspace/web/: Cargo.toml
workspace/web/src/: lib.rs  main.rs  schema.rs  server.rs  web_server.rs
workspace/web/src/resolvers/: user_resolver.rs
