[package]
name = "base"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "0.4.2"
dotenvy = "0.15.7"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
time = "0.3.41"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v7"] }
