[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-tracing-opentelemetry = "0.28.0"
base = { path = "../base" }
init-tracing-opentelemetry = { version = "0.28.0", features = [
    "tracing_subscriber_ext",
] }
serde_json = "1.0"
sqlx = "0.8.5"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
