[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.16", features = ["time", "tracing", "uuid"] }
async-graphql-axum = "7.0.16"
axum = "0.8.4"
axum-tracing-opentelemetry = "0.28.0"
base = { path = "../base", features = ["testing"] }
ctor = "0.4.2"
init-tracing-opentelemetry = { version = "0.28.0", features = [
    "tracing_subscriber_ext",
] }
serde_json = "1.0"
sqlx = "0.8.5"
time = "0.3.41"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
uuid = "1.16.0"

[dev-dependencies]
meta = { path = "../meta" }
